--- a/signup1.css
+++ b/signup1.css
@@ -9,4 +9,107 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
+    background-color: #b3e5fc;
+    /*background: url('https://images.pexels.com/photos/1939485/pexels-photo-1939485.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;*/
 }
+/*wrapper*/
+.wrapper{
+    width: 420px;
+    background-color: rgba(223, 214, 131, 0.68);
+    border: 2px solid rgba(255, 255, 255, 2);
+    backdrop-filter: blur(15px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 2);
+    color: black;
+    border-radius: 10px;
+    padding: 30px 40px;
+}
+.wrapper h1{
+    font-size: 36px;
+    text-align: center;
+    color:black;
+}
+.wrapper .input-box{
+    width: 100%;
+    height: 50px;
+    position: relative;
+    margin: 30px 0;
+}
+/*input*/
+.input-box input{
+    width: 100%;
+    height: 100%;
+    background: white;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, 2);
+    border-radius: 40px;
+    font-size: 16px;
+    color:black;
+    padding: 20px 45px 20px 20px;
+}
+.input-box input::placeholder{
+    color: black;
+}
+.input-box i{
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translate(-50%);
+    font-size: 20px;
+}
+.wrapper .remember-forgot{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 14px;
+    margin: -15px 0 15px;
+}
+.remember-forgot label {
+    display: flex;
+    align-items: center;
+    gap: 5px; /* jarak antara checkbox dan teks */
+    color: black;
+}
+.remember-forgot label input{
+    margin-right: 3px;
+    accent-color: #fff;
+}
+.remember-forgot a{
+    color: black;
+    text-decoration: none;
+}
+.remember-forgot a:hover{
+    text-decoration: underline;
+}
+/*button*/
+.wrapper .btn{
+    width: 100%;
+    height: 45px;
+    background: rgba(123, 116, 53, 0.68);
+    color:white;
+    border: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
+}
+/*link*/
+.wrapper .register-link{
+    text-align: center;
+    font-size: 14px;
+    margin: 20px 0 15px;
+}
+.wrapper .register-link p a{
+    color: black;
+    text-decoration: none;
+    font-weight: 600;
+}
+.wrapper .register-link p a:hover{
+    text-decoration: underline;
+}
+
