--- a/styles.css
+++ b/styles.css
@@ -28,15 +28,18 @@ header {
 .logo {
   display: flex;
   align-items: center;
+  gap: 10px;
 }
 .logo img {
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 80px;
+  object-fit: contain;
 }
 .logo span {
   font-size: 24px;
+  font-weight: bold;
   color: #0288d1;
-  margin-left: 10px;
+  letter-spacing: 1px;
 }
 
 /* Navbar */
@@ -78,6 +81,7 @@ main {
 #home h1 {
   font-size: 36px;
   color: #0288d1;
+}
 
 #home h1 {
     font-size: 36px;
