--- a/client/public/assets/login1.css
+++ b/client/public/assets/login1.css
@@ -80,8 +80,8 @@ body {
   accent-color: #1976d2;
 }
 
-.btn,
-.signup {
+button.btn,
+button.signup {
   width: 100%;
   height: 45px;
   background: #1976d2;
@@ -96,7 +96,7 @@ body {
   transition: background 0.3s;
 }
 
-.btn:hover,
-.signup:hover {
+button.btn:hover,
+button.signup:hover {
   background: #0d47a1;
 }
